; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/libunbound/extr_libunbound.c_ub_ctx_data_remove.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/libunbound/extr_libunbound.c_ub_ctx_data_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ub_ctx = type { i32 }

@UB_SYNTAX = common dso_local global i32 0, align 4
@LDNS_RR_CLASS_IN = common dso_local global i32 0, align 4
@UB_NOERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ub_ctx_data_remove(%struct.ub_ctx* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ub_ctx*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.ub_ctx* %0, %struct.ub_ctx** %4, align 8
  store i8* %1, i8** %5, align 8
  %10 = load %struct.ub_ctx*, %struct.ub_ctx** %4, align 8
  %11 = call i32 @ub_ctx_finalize(%struct.ub_ctx* %10)
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* %9, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* %9, align 4
  store i32 %15, i32* %3, align 4
  br label %34

16:                                               ; preds = %2
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @parse_dname(i8* %17, i32** %6, i64* %8, i32* %7)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %16
  %21 = load i32, i32* @UB_SYNTAX, align 4
  store i32 %21, i32* %3, align 4
  br label %34

22:                                               ; preds = %16
  %23 = load %struct.ub_ctx*, %struct.ub_ctx** %4, align 8
  %24 = getelementptr inbounds %struct.ub_ctx, %struct.ub_ctx* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32*, i32** %6, align 8
  %27 = load i64, i64* %8, align 8
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* @LDNS_RR_CLASS_IN, align 4
  %30 = call i32 @local_zones_del_data(i32 %25, i32* %26, i64 %27, i32 %28, i32 %29)
  %31 = load i32*, i32** %6, align 8
  %32 = call i32 @free(i32* %31)
  %33 = load i32, i32* @UB_NOERROR, align 4
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %22, %20, %14
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @ub_ctx_finalize(%struct.ub_ctx*) #1

declare dso_local i32 @parse_dname(i8*, i32**, i64*, i32*) #1

declare dso_local i32 @local_zones_del_data(i32, i32*, i64, i32, i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
